--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -47,6 +47,7 @@ SUBDIRS += snmp
 SNMP_LIBS = snmp/libsnmp.la $(SNMPLIB)
 else
 SNMP_SOURCE =
+DONOTTEST += $(SNMP_SOURCE)
 endif
 
 if ENABLE_ADAPTATION
@@ -100,10 +101,13 @@ if ENABLE_DELAY_POOLS
 DELAY_POOL_SOURCE = $(DELAY_POOL_ALL_SOURCE)
 else
 DELAY_POOL_SOURCE =
+DONOTTEST += $(DELAY_POOL_ALL_SOURCE)
 endif
 
 if ENABLE_HTCP
 HTCPSOURCE = htcp.cc htcp.h
+else
+DONOTTEST += htcp.cc htcp.h
 endif
 
 if ENABLE_UNLINKD
