--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -47,7 +47,7 @@ SUBDIRS += snmp
 SNMP_LIBS = snmp/libsnmp.la $(SNMPLIB)
 else
 SNMP_SOURCE =
-DONOTTEST += $(SNMP_SOURCE)
+EXCLUDE_FROM_HDR_TESTING += $(SNMP_SOURCE)
 endif
 
 if ENABLE_ADAPTATION
@@ -101,13 +101,13 @@ if ENABLE_DELAY_POOLS
 DELAY_POOL_SOURCE = $(DELAY_POOL_ALL_SOURCE)
 else
 DELAY_POOL_SOURCE =
-DONOTTEST += $(DELAY_POOL_ALL_SOURCE)
+EXCLUDE_FROM_HDR_TESTING += $(DELAY_POOL_ALL_SOURCE)
 endif
 
 if ENABLE_HTCP
 HTCPSOURCE = htcp.cc htcp.h
 else
-DONOTTEST += htcp.cc htcp.h
+EXCLUDE_FROM_HDR_TESTING += htcp.cc htcp.h
 endif
 
 if ENABLE_UNLINKD
