--- a/src/acl/Makefile.am
+++ b/src/acl/Makefile.am
@@ -178,7 +178,7 @@ SSL_ACLS = \
 if ENABLE_SSL
 libacls_la_SOURCES += $(SSL_ACLS)
 else
-DONOTTEST += $(SSL_ACLS)
+EXCLUDE_FROM_HDR_TESTING += $(SSL_ACLS)
 endif
 EXTRA_libacls_la_SOURCES += $(SSL_ACLS)
 
@@ -191,7 +191,7 @@ ADAPT_ACLS= \
 if ENABLE_ADAPTATION
 libacls_la_SOURCES += $(ADAPT_ACLS)
 else
-DONOTTEST += $(ADAPT_ACLS)
+EXCLUDE_FROM_HDR_TESTING += $(ADAPT_ACLS)
 endif
 EXTRA_libacls_la_SOURCES += $(ADAPT_ACLS)
 
@@ -200,6 +200,6 @@ ARP_ACLS = Arp.cc Arp.h Eui64.cc Eui64.h
 if ENABLE_EUI
 libacls_la_SOURCES += $(ARP_ACLS)
 else
-DONOTTEST += $(ARP_ACLS)
+EXCLUDE_FROM_HDR_TESTING += $(ARP_ACLS)
 endif
 EXTRA_libacls_la_SOURCES += $(ARP_ACLS)
