--- a/src/Common.am
+++ b/src/Common.am
@@ -81,14 +81,14 @@ EXTENSIONS=.hdrtest
 	SrcFileName=`basename $$SrcFilePath`; \
 	TargetFileName=`basename $@`; \
 	if test "" != "$(EXCLUDE_FROM_HDR_TESTING)" && echo "$(EXCLUDE_FROM_HDR_TESTING)" | $(TR) ' ' '\n' | $(GREP) -x -q "$$SrcFileName" ; then \
-		echo "skip - $$SrcFilePath"; \
+		echo "header-test: skip - $$SrcFilePath"; \
 		exit 0; \
 	fi; \
 	$(SED) "s%[@]HEADER[@]%${<}%" "$(top_srcdir)/test-suite/testHeader.cc.in" >"$$TargetFileName.cc" && \
 	echo "$(CXXCOMPILE) -DIN_TESTHEADERS=1 -c -o" "$$TargetFileName" "$$TargetFileName.cc" && \
 	if $(CXXCOMPILE) -DIN_TESTHEADERS=1 -c -o "$$TargetFileName" "$$TargetFileName.cc" ; \
-	then echo "ok - $$SrcFilePath"; $(RM) "$$TargetFileName.cc" "$$TargetFileName"; \
-	else echo "not ok - $$SrcFilePath"; exit 1; fi
+	then echo "header-test: ok - $$SrcFilePath"; $(RM) "$$TargetFileName.cc" "$$TargetFileName"; \
+	else echo "header-test: not ok - $$SrcFilePath"; exit 1; fi
 
 # nothing to do, skip
 .cc.hdrtest:
