Don't duplicate htcp sources list

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -104,10 +104,11 @@ DELAY_POOL_SOURCE =
 EXCLUDE_FROM_HDR_TESTING += $(DELAY_POOL_ALL_SOURCE)
 endif
 
+KNOWN_HTCP_SOURCE = htcp.cc htcp.h
 if ENABLE_HTCP
-HTCPSOURCE = htcp.cc htcp.h
+HTCPSOURCE = $(KNOWN_HTCP_SOURCE)
 else
-EXCLUDE_FROM_HDR_TESTING += htcp.cc htcp.h
+EXCLUDE_FROM_HDR_TESTING += $(KNOWN_HTCP_SOURCE)
 endif
 
 if ENABLE_UNLINKD
