--- a/src/Common.am
+++ b/src/Common.am
@@ -85,8 +85,8 @@ EXTENSIONS=.hdrtest
 		exit 0; \
 	fi; \
 	$(SED) "s%[@]HEADER[@]%${<}%" "$(top_srcdir)/test-suite/testHeader.cc.in" >"$$TargetFileName.cc" && \
-	echo "$(CXXCOMPILE) -DIN_TESTHEADERS=1 -c -o" "$$TargetFileName" "$$TargetFileName.cc" && \
-	if $(CXXCOMPILE) -DIN_TESTHEADERS=1 -c -o "$$TargetFileName" "$$TargetFileName.cc" ; \
+	echo "$(CXXCOMPILE) -c -o" "$$TargetFileName" "$$TargetFileName.cc" && \
+	if $(CXXCOMPILE) -c -o "$$TargetFileName" "$$TargetFileName.cc" ; \
 	then echo "header-test: ok - $$SrcFilePath"; $(RM) "$$TargetFileName.cc" "$$TargetFileName"; \
 	else echo "header-test: not ok - $$SrcFilePath"; exit 1; fi
 
