Fix syntax error in Makefile.am

--- a/src/TestHeaders.am
+++ b/src/TestHeaders.am
@@ -9,5 +9,7 @@
 testHeaders: $(SOURCES) $(top_srcdir)/test-suite/testHeader.cc.in
 	$(MAKE) $(^:.h=.hdrtest) && cp $(TRUE) $@
 
+TESTS += testHeaders
+
 ## needed to remove artifacts used to signal header compile success
-CLEANFILES += testHeaders
+# CLEANFILES += testHeaders
