--- a/test-suite/testHeader.cc.in
+++ b/test-suite/testHeader.cc.in
@@ -7,8 +7,8 @@
  */
 
 /*
- * This file is used to test including squid header files.
- * see the testHeaders target in Makefile.am and Common.am
+ * This file is used to test whether Squid header files can be compiled on their own.
+ * See the testHeaders target in src/TestHeaders.am.
  */
 
 #include "squid.h"
