--- a/src/Common.am
+++ b/src/Common.am
@@ -49,6 +49,10 @@ TESTS =
 # testHeaders during "make check"
 EXCLUDE_FROM_HDR_TESTING =
 
+# A space-separated list of header files to be tested
+# in addition to SOURCES during "make check"
+INCLUDE_IN_HDR_TESTING =
+
 AM_CPPFLAGS = \
 	-I$(top_srcdir) \
 	-I$(top_srcdir)/include \
