--- a/src/Common.am
+++ b/src/Common.am
@@ -94,3 +94,5 @@ subst_perlshell = sed -e 's,[@]PERL[@],$(PERL),g' <$(srcdir)/$@.pl.in >$@ || ($(
 	if $(CXXCOMPILE) -c -o "$$TargetFileName" "$$TargetFileName.cc" ; \
 	then echo "header-test: ok - $$SrcFilePath"; $(RM) "$$TargetFileName.cc" "$$TargetFileName"; \
 	else echo "header-test: not ok - $$SrcFilePath"; exit 1; fi
+
+include $(top_srcdir)/src/TestHeaders.am
