alternate form for INCLUDE_IN_HDR_TESTING

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -77,4 +77,4 @@ tests_testRFC1738_LDADD= \
 
 tests_testRFC1738_LDFLAGS = $(LIBADD_DL)
 
-INCLUDE_IN_HDR_TESTING += $(top_srcdir)/include/*.h
+testHeaders: $(top_srcdir)/include/*.h
