--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,9 @@
 ## Please see the COPYING and CONTRIBUTORS files for details.
 ##
 
-AUTOMAKE_OPTIONS = dist-bzip2 1.5 foreign parallel-tests
+# v1.13 has decent parallel-tests implementation. We require
+# parallel-tests (enabled by default in v1.13) because XXX.
+AUTOMAKE_OPTIONS = dist-bzip2 1.13 foreign
 
 SUBDIRS = compat contrib doc errors icons
 
