--- a/doc/release-notes/release-7.sgml.in
+++ b/doc/release-notes/release-7.sgml.in
@@ -70,11 +70,11 @@ The Squid-@SQUID_RELEASE@ change history can be <url url="https://github.com/squ
    the method. Like so:
 <verb>
     acl PURGE method PURGE
-    ... and http_access allow PURGE traffic as/if needed ...
+    http_access allow localhost PURGE
 </verb>
-    any HTTP client (such as curl) can then be used to evict objects from the cache, for example:
+    Any HTTP client (such as curl) can then be used to evict objects from the cache, for example:
 <verb>
-$ curl -XPURGE --proxy http://127.0.0.1:3128 http://url.to/evict/
+    curl -XPURGE --proxy http://127.0.0.1:3128 http://url.to/evict/
 </verb>
    Alternatively the HTCP <em>CLR</em> mechanism can be used.
 
