Drop unused ConfigParser::QuoteString

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2695,6 +2695,8 @@ tests_testConfigParser_SOURCES = \
 	tests/testConfigParser.cc
 nodist_tests_testConfigParser_SOURCES = \
 	ConfigParser.cc \
+	tests/stub_SBuf.cc \
+	String.cc \
 	tests/stub_acl.cc \
 	tests/stub_cache_cf.cc \
 	tests/stub_debug.cc \
@@ -2702,9 +2704,6 @@ nodist_tests_testConfigParser_SOURCES = \
 	tests/stub_libmem.cc \
 	tests/stub_neighbors.cc
 tests_testConfigParser_LDADD = \
-	format/libformat.la \
-	parser/libparser.la \
-	sbuf/libsbuf.la \
 	base/libbase.la \
 	$(LIBCPPUNIT_LIBS) \
 	$(COMPAT_LIB) \
