--- a/src/Common.am
+++ b/src/Common.am
@@ -70,4 +70,5 @@ COMPAT_LIB = $(top_builddir)/compat/libcompatsquid.la $(LIBPROFILER)
 ## Some helpers are written in Perl and need the local shell defined properly
 subst_perlshell = sed -e 's,[@]PERL[@],$(PERL),g' <$(srcdir)/$@.pl.in >$@ || ($(RM) -f $@ ; exit 1)
 
+include $(top_srcdir)/doc/manuals/Substitute.am
 include $(top_srcdir)/src/TestHeaders.am
