Fix github functionality-tests broken since inception

--- a/.github/workflows/quick.yaml
+++ b/.github/workflows/quick.yaml
@@ -45,8 +45,11 @@ jobs:
     steps:
       - name: Install prerequisite packages
         run: |
+          # required for "apt-get build-dep" to work
+          sudo sed --in-place -E 's/# (deb-src.*updates main)/  \1/g' /etc/apt/sources.list
           sudo apt-get --quiet=2 update
-          sudo apt-get --quiet=2 install libtool-bin
+          sudo apt-get --quiet=2 build-dep squid
+          sudo apt-get --quiet=2 install linuxdoc-tools libtool-bin pandoc
 
       - name: Setup a nodejs environment
         uses: actions/setup-node@v4
