--- a/test-suite/squidconf/acl-src-dstdomain-http-status.conf
+++ b/test-suite/squidconf/acl-src-dstdomain-http-status.conf
@@ -12,8 +12,9 @@ acl foo_dstdomain dstdomain .three.example.org
 acl foo_src_4 src 192.168.2.0/24 192.168.1.0/24
 acl foo_src_4 src 192.168.3.0-192.168.3.255
 
-acl foo_src_6 src fed0::2-fee0:: fee0::1
-acl foo_src_6 src fec0::-fed0:: fed0::1
+# TODO: make configurable depending on USE_IPV6
+# acl foo_src_6 src fed0::2-fee0:: fee0::1
+# acl foo_src_6 src fec0::-fed0:: fed0::1
 
 acl foo http_status 404 200 199
 acl foo http_status 500 206
