Updated test-suite checks using recently added expect-messages checks
Merged multiple tiny and closely-related test files.

TODO: Decide whether to separate IPv6 tests.

--- a/test-suite/squidconf/bad-acl-http-status-dupe.conf
+++ b/test-suite/squidconf/bad-acl-http-status-dupe.conf
@@ -5,8 +5,14 @@
 ## Please see the COPYING and CONTRIBUTORS files for details.
 ##
 
-acl test10 http_status 200 200-300
+acl test11 http_status 400 400
+acl test12 http_status 407 400 407
+acl test13 http_status 200 200-300
+
+acl test14 http_status 300-399
+acl test14 http_status 304
+
 acl test21 http_status 100-300 350 200-400
 acl test22 http_status 150 200-400 100-300
-acl test30 http_status 300 400 300-400
 
+acl test30 http_status 300 400 300-400
