fixup: Added one more (very) temporary file to CLEANFILES

--- a/test-suite/Makefile.am
+++ b/test-suite/Makefile.am
@@ -155,4 +155,5 @@ CLEANFILES += \
 	squid-conf-tests \
 	squid-expected-messages \
 	squid-stderr.log \
+	squid-stderr.log.next \
 	squid-stderr.log.unmatched
